--- a/templates/login.tmpl
+++ b/templates/login.tmpl
@@ -40,11 +40,10 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">BST-Backup SyncThing</a>
+          <a class="navbar-brand" href="/">BST-Backup SyncThing</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="/">Main</a></li>
             <li class="active"><a href="/login">Login</a></li>
             <li><a href="/signup">Signup</a></li>
           </ul>
