--- a/templates/admin.tmpl
+++ b/templates/admin.tmpl
@@ -39,6 +39,7 @@
 					</li>
 				</ul>
 			</div>
+			<script>console.log(user)</script>
 			<div class="col-sm-6" ng-show="user._id.$oid">
 				<h2>{{user.Name}}</h2>
 				<dl class="dl-horizontal">
